--- a/webdriverio-sandbox/package.json
+++ b/webdriverio-sandbox/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js"
+    "test": "wdio wdio.conf.js",
+    "test-hot-reload": "chimp --mocha --watch --path=test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-2": "^6.5.0",
     "webdriverio": "^4.0.5"
   },
   "devDependencies": {
