--- a/webdriverio-sandbox2/package.json
+++ b/webdriverio-sandbox2/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "webdriverio-sandbox",
+  "name": "webdriverio-sandbox2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js",
-    "test-hot-reload": "chimp --mocha --watch --path=test"
+    "test": "wdio wdio.conf.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
     "chai": "^3.5.0",
     "webdriverio": "^4.0.7"
   },
