--- a/webdriverio-sandbox3/package.json
+++ b/webdriverio-sandbox3/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "webdriverio-sandbox",
+  "name": "webdriverio-sandbox3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js",
-    "test-hot-reload": "chimp --mocha --watch --path=test"
+    "test": "chimp --mocha --watch --path=test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "webdriverio": "^4.0.7",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "chai": "^3.5.0",
-    "webdriverio": "^4.0.7"
+    "babel-preset-stage-2": "^6.5.0"
   },
   "devDependencies": {
     "wdio-mocha-framework": "^0.2.13"
