--- a/webdriverio-sandbox/package.json
+++ b/webdriverio-sandbox/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "wdio wdio.conf.js"
+    "test": "node test.js"
   },
   "keywords": [],
   "author": "",
