--- a/webdriverio-sandbox2/package.json
+++ b/webdriverio-sandbox2/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "webdriverio": "^4.0.7"
   },
   "devDependencies": {
